# worldspace

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  worldspace.sln  worldspace.sln.DotSettings
linux-deployment/: linux-deployment.vcxproj
tmp/: .gitignore
tmp/worldspace/: Coord.h  Frame.h  FrameBuffer.cpp  GameRules.h  PlayerStatBox.h  actor.h  actorbase.h  controls.h  def.ini  faction.h  item.h  itemstatic.h  main.cpp  resource.h  shared.h  tilematrix.h  worldspace.vcxproj
worldspace/: 20x20.txt  CMakeLists.txt  Coord.cpp  Coord.h  DOCUMENTATION.txt  Flare.h  Frame.h  FrameBuffer.cpp  FrameBuffer.h  GameRules.h  GameState.h  Gamespace.cpp  Gamespace.h  INI_Include.h  PlayerStatBox.h  ThreadFunctions.h  WinAPI.h  actor.h  actor_templates.ini  cell.h  config.ini  controls.h  def.ini  faction.h  game.h  game.hpp  game_query.h  game_threads.h  game_threads.hpp  init.h  interpret.h  item.h  itemdynamic.h  itemstats.h  log.txt  main.cpp  resource.h  settings.h  shared.h  test.ini  (+6 more)
worldspace/actors/: actor.h
worldspace/config/: actor_templates.ini  config.ini
worldspace/framebuffer/: Flare.h  Frame.h  FrameBuffer.h  PlayerStatBox.h
worldspace/gameworld/: Coord.h  Gamespace.h  cell.h
worldspace/items/: item.h  itemstatic.h  itemstats.h
worldspace/resources/: worldspace.rc
worldspace/runtime/: ThreadFunctions.h  game.hpp  init.h  shared.h
worldspace2/: CMakeLists.txt  COLOR.h  Controls.h  GameConfig.h  Global.h  calc.h  worldspace2-projectvisualizer.pdn  worldspace2.cpp
worldspace2/actors/: ActorBase.hpp  ActorTemplate.hpp  Actors.h  Faction.hpp  Projectile.hpp  UID_Controller.h
worldspace2/base/: ActorBase.hpp  BaseAttributes.hpp
worldspace2/display/: GameOverMenu.hpp  PauseMenu.hpp  debug.h  frame.hpp  framebuffer.hpp  framebuilder.hpp  framelinker.hpp  positionable_text.h  statpanel.hpp
worldspace2/items/: ItemBase.hpp  ItemTemplate.hpp
worldspace2/resources/: cpp.hint  version.h
worldspace2/utils/: point.hpp
worldspace2/world/: framebuilder_gamespace.hpp  framebuilder_matrix.hpp  framelinker_gamespace.hpp  gamespace.hpp  matrix.hpp  point.h  tile.h
